Task instance Java/117